# NJU_SE_PhotoWaterMark2

./: .gitignore  CREATE_RELEASE.md  Makefile  README.md  RELEASE_NOTES.md  SRS.md  build.bat  build.py  pyproject.toml  requirements.txt  run.bat  run.py  setup.py  test_image.py  作业要求.md
photo_watermark/: __init__.py  main.py
photo_watermark/core/: batch_processor.py  image_processor.py  watermark.py
photo_watermark/gui/: control_panel.py  export_panel.py  image_panel.py  main_window.py  watermark_panel.py
photo_watermark/utils/: app_config.py
